--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "SPABoilerplate",
+  "name": "StockChart",
   "version": "0.0.0",
-  "description": "Boilerplate for Single Page Web Application",
+  "description": "Stock Chart Web Application",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
