--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "angular": "~1.2.25",
     "angular-resource": "~1.2.25",
     "angular-route": "~1.2.25",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "angular-mousewheel": "~1.0.4"
   }
 }
